[package]
name = "helldivers_rs"
version = "0.3.0"
edition = "2021"
authors = ["LordOfPolls <dev@lordofpolls.com"]
description = "A rust wrapper for the unofficial helldivers API."
readme = "README.md"
homepage = "https://github.com/LordOfPolls/FileCat"
repository = "https://github.com/LordOfPolls/FileCat"
license = "MIT"
keywords = ["helldivers", "api", "wrapper", "async"]
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
once_cell = "1.8"
tokio = { version = "1.0", features = ["full"] }